nixos/_mixins/k3s/manifests/rancher.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
---
