nixos/_mixins/k3s/manifests/traefik.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 9000
    targetPort: traefik
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.sticky: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: <HOSTNAME>
    http:
      paths:
        - path: /dashboard/
          pathType: Prefix
          backend:
            service:
              name: traefik-dashboard
              port:
                number: 9000
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: traefik-dashboard
              port:
                number: 9000
